examples/datalog/14_aggregations/71_top_k_simple.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_topk
Knowledge graph 'test_topk' created.
Switched to knowledge graph: test_topk
> .kg use test_topk
Switched to knowledge graph: test_topk
> +scores[(1, 85), (2, 92), (3, 78), (4, 95), (5, 88)].
Inserted 5 fact(s) into 'scores'.
> +top_scores(<TOP_K(3):Score>) :- scores(_, Score).
Script error: Parse error: Invalid term: '<TOP_K(3):Score>'
