examples/datalog/14_aggregations/71_top_k_simple.dl
% Test: TOP_K aggregation basic
% Expected: Get top K values
% Category: 14_aggregations
% Priority: P2 - Aggregation patterns

.kg create test_topk
.kg use test_topk

+scores[(1, 85), (2, 92), (3, 78), (4, 95), (5, 88)].

% Get top 3 scores
+top_scores(<TOP_K(3):Score>) :- scores(_, Score).

?- top_scores(S).

.kg use default
.kg drop test_topk
